--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,9 @@
 steps:
-- name: node:10.15.1
-  entrypoint: npm
-  args: ["install"]
-- name: node:10.15.1
-  entrypoint: npm
-  args: ["run", "build"]
-- name: "gcr.io/cloud-builders/gcloud"
-  args: ["app", "deploy"]
-timeout: "1600s"
+...
+# deploy container image to GKE
+- name: "gcr.io/cloud-builders/gke-deploy"
+  args:
+  - run
+  - --filename=k8s/Deployment.yaml
+  - --location=us-east1
+  - --cluster=gkecluster
