--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 ...
-# deploy container image to GKE
+# deploy container image to GKE ----
 - name: "gcr.io/cloud-builders/gke-deploy"
   args:
   - run
